--- a/public/client/views/admin/partnerList.view.html
+++ b/public/client/views/admin/partnerList.view.html
@@ -10,6 +10,10 @@
     </div>
 </div>
 
+    <div style="text-align:center">
+        <label style="font-size: 30px">Submitted Applications</label>
+    </div>
+
 <div class="container-fluid" style="margin-top: 100px">
 
     <div class="col-md-2 right-line1">
