--- a/public/client/views/admin/adminPartnerSpecificProposalInProgress.view.html
+++ b/public/client/views/admin/adminPartnerSpecificProposalInProgress.view.html
@@ -3,54 +3,38 @@
 <div id="content">
     <div id="mainBox" class="textBox">
         <div id="mainMenuBar">
-            <a href="#/admin/1/adminPartnerListInProgress" class="btn btn-primary ">In Progress</a>
-            <a href="#/admin/1/adminPartnerList" class="btn btn-primary ">Submitted</a>
-            <!--<a class="btn btn-primary ">Login</a>-->
+            <a href="#/admin/{{model.aid}}/adminPartnerListInProgress" class="btn btn-primary ">In Progress</a>
+            <a href="#/admin/{{model.aid}}/adminPartnerList" class="btn btn-primary ">Submitted</a>
         </div>
     </div>
 </div>
 
+<div style="text-align:center">
+    <label style="font-size: 30px">InProgress Applications</label>
+</div>
 
 <div class="container-fluid" style="margin-top: 100px">
 
-   <div class="col-md-2 right-line1">
-       <ul class="list-group">
-           <li class="list-group-item active">
-               <a style="color: white" href="#/admin/1/adminPartnerListInProgress/1">Cras justo odio</a>
-           </li>
-           <li class="list-group-item">
-               <a href="#/admin/1/adminPartnerListInProgress/1">Dapibus ac facilisis in</a>
-           </li>
-           <li class="list-group-item">
-               <a href="#/admin/1/adminPartnerListInProgress/1">Morbi leo risus</a>
-           </li>
-           <li class="list-group-item">
-               <a href="#/admin/1/adminPartnerListInProgress/1">Porta ac consectetur ac</a>
-           </li>
-           <li class="list-group-item">
-               <a href="#/admin/1/adminPartnerListInProgress/1">Vestibulum at eros</a>
-           </li>
-       </ul>
+    <div class="col-md-2 right-line1">
+        <ul class="list-group">
 
-   </div>
+            <li ng-repeat="partner in model.partners" class="list-group-item"   >
+                <a ng-if="partner._id==model.pid" href="#/admin/{{model.aid}}/adminPartnerListInProgress/{{partner._id}}"><b>{{partner.name}}</b></a>
+
+                <a ng-if="partner._id!=model.pid" href="#/admin/{{model.aid}}/adminPartnerListInProgress/{{partner._id}}">{{partner.name}}</a>
+            </li>
+
+        </ul>
+
+    </div>
 
     <div class="col-md-4 right-line1">
         <ul class="list-group">
-            <li class="list-group-item active">
-                <a style="color: white" href="#/admin/1/adminPartnerListInProgress/1/proposal/1"> Cras justo odio</a>
+
+            <li ng-repeat="p in model.pApplications" class="list-group-item" >
+                <a href="#/admin/{{model.aid}}/adminPartnerListInProgress/{{p.orgId}}/proposal/{{p._id}}">{{p.title}}</a>
             </li>
-            <li class="list-group-item">
-            <a href="#/admin/1/adminPartnerListInProgress/1/proposal/1">Dapibus ac facilisis in</a>
-            </li>
-            <li class="list-group-item">
-                <a href="#/admin/1/adminPartnerListInProgress/1/proposal/1"> Morbi leo risus</a>
-            </li>
-            <li class="list-group-item">
-             <a href="#/admin/1/adminPartnerListInProgress/1/proposal/1">Porta ac consectetur ac</a>
-            </li>
-            <li class="list-group-item">
-                <a href="#/admin/1/adminPartnerList/1/proposal/1">Vestibulum at eros</a>
-            </li>
+
         </ul>
 
     </div>
