--- a/public/client/views/admin/partnerListInProgress.view.html
+++ b/public/client/views/admin/partnerListInProgress.view.html
@@ -1,48 +1,42 @@
 
-
-<div id="content">
-    <div id="mainBox" class="textBox">
-        <div id="mainMenuBar">
-            <a href="#/admin/1/adminPartnerListInProgress" class="btn btn-primary ">In Progress</a>
-            <a href="#/admin/1/adminPartnerList" class="btn btn-primary ">Submitted</a>
-            <!--<a class="btn btn-primary ">Login</a>-->
+<div >
+    <div id="content" >
+        <div id="mainBox" class="textBox">
+            <div id="mainMenuBar">
+                <a href="#/admin/{{model.aid}}/adminPartnerListInProgress" class="btn btn-primary ">In Progress</a>
+                <a href="#/admin/{{model.aid}}/adminPartnerList" class="btn btn-primary ">Submitted</a>
+                <!--<a class="btn btn-primary ">Login</a>-->
+            </div>
         </div>
     </div>
-</div>
 
-
-<div class="container-fluid" style="margin-top: 100px">
-
-    <div class="col-md-2 right-line1">
-        <ul class="list-group">
-            <li class="list-group-item active">
-                <a style="color: white" href="#/admin/1/adminPartnerListInProgress/1">Cras justo odio</a>
-            </li>
-            <li class="list-group-item">
-                <a href="#/admin/1/adminPartnerListInProgress/1">Dapibus ac facilisis in</a>
-            </li>
-            <li class="list-group-item">
-                <a href="#/admin/1/adminPartnerListInProgress/1">Morbi leo risus</a>
-            </li>
-            <li class="list-group-item">
-                <a href="#/admin/1/adminPartnerListInProgress/1">Porta ac consectetur ac</a>
-            </li>
-            <li class="list-group-item">
-                <a href="#/admin/1/adminPartnerListInProgress/1">Vestibulum at eros</a>
-            </li>
-        </ul>
-
+    <div style="text-align:center">
+        <label style="font-size: 30px">InProgress Applications</label>
     </div>
 
-    <div class="col-md-4 right-line1">
+    <div class="container-fluid" style="margin-top: 100px">
+
+        <div class="col-md-2 right-line1">
+            <ul class="list-group">
+
+                <li  ng-repeat="partner in model.partners" class="list-group-item">
+                    <a  href="#/admin/{{model.aid}}/adminPartnerListInProgress/{{partner._id}}">{{partner.name}}</a>
+
+                </li>
+            </ul>
+
+        </div>
+
+        <div class="col-md-4 right-line1">
 
 
-    </div>
+        </div>
 
-    <div class="col-md-6 right-line1">
+        <div class="col-md-6 right-line1">
+
+
+        </div>
 
 
     </div>
-
-
 </div>
