--- a/public/client/views/admin/partnerList.view.html
+++ b/public/client/views/admin/partnerList.view.html
@@ -5,6 +5,7 @@
         <div id="mainMenuBar">
             <a href="#/admin/{{model.aid}}/adminPartnerListInProgress" class="btn btn-primary ">In Progress</a>
             <a href="#/admin/{{model.aid}}/adminPartnerList" class="btn btn-primary ">Submitted</a>
+            <a href="#/admin" class="btn btn-primary ">Admin Home</a>
             <!--<a class="btn btn-primary ">Login</a>-->
         </div>
     </div>
