--- a/public/client/views/admin/adminPartnerSpecificProposalView.view.html
+++ b/public/client/views/admin/adminPartnerSpecificProposalView.view.html
@@ -5,6 +5,7 @@
         <div id="mainMenuBar">
             <a href="#/admin/1/adminPartnerListInProgress" class="btn btn-primary ">In Progress</a>
             <a href="#/admin/1/adminPartnerList" class="btn btn-primary ">Submitted</a>
+            <a href="#/admin" class="btn btn-primary ">Admin Home</a>
         </div>
     </div>
 </div>
