--- a/public/client/views/admin/adminPartnerSpecificProposalViewInProgress.view.html
+++ b/public/client/views/admin/adminPartnerSpecificProposalViewInProgress.view.html
@@ -5,6 +5,7 @@
         <div id="mainMenuBar">
             <a href="#/admin/1/adminPartnerListInProgress" class="btn btn-primary ">In Progress</a>
             <a href="#/admin/1/adminPartnerList" class="btn btn-primary ">Submitted</a>
+            <a href="#/admin" class="btn btn-primary ">Admin Home</a>
         </div>
     </div>
 </div>
@@ -111,7 +112,7 @@
                 <div class="modal-footer">
 
                     <!--<div ng-if="model.form.state==='InProgress'">-->
-                    <!--<button ng-if="model.form.state==='InProgress'" ng-click="model.saveForm(model.form)" type="button" class="btn btn-success" data-dismiss="modal">Save</button>-->
+                    <button ng-if="model.form.state==='InProgress'" ng-click="model.nudge(model.form.userId)" type="button" class="btn btn-success" data-dismiss="modal">Nudge</button>
                     <!--</div>-->
                     <!--<div>-->
                     <!--<button  type="button" class="btn btn-danger" data-dismiss="modal">close</button>-->
