--- a/public/client/views/admin/adminPartnerSpecificProposalViewInProgress.view.html
+++ b/public/client/views/admin/adminPartnerSpecificProposalViewInProgress.view.html
@@ -19,9 +19,9 @@
         <ul class="list-group">
 
             <li ng-repeat="partner in model.partners" class="list-group-item"   >
-                <a ng-if="partner._id==model.pid" href="#/admin/{{model.aid}}/adminPartnerListInProgress/{{partner.orgId}}"><b>{{partner.name}}</b></a>
+                <a ng-if="partner._id==model.pid" href="#/admin/{{model.aid}}/adminPartnerListInProgress/{{model.pid}}"><b>{{partner.name}}</b></a>
 
-                <a ng-if="partner._id!=model.pid" href="#/admin/{{model.aid}}/adminPartnerListInProgress/{{partner.orgId}}">{{partner.name}}</a>
+                <a ng-if="partner._id!=model.pid" href="#/admin/{{model.aid}}/adminPartnerListInProgress/{{model.pid}}">{{partner.name}}</a>
             </li>
 
         </ul>
@@ -58,7 +58,7 @@
                         <!--{{model.fields}}-->
                         <div ng-model="model.form.fields">
 
-                            <div ng-repeat="field in model.form.fields" style="">
+                            <div ng-repeat="field in model.form.fields | orderBy: 'position'" style="">
 
                                 <br>
 
@@ -73,9 +73,9 @@
                                     <div ng-switch on="field.type" class="pull-left">
 
 
-                                        <input ng-model="field.value" ng-switch-when="TEXT" type="text" class="form-control" readonly>
+                                        <input ng-model="field.value" ng-switch-when="TEXT" type="text" class="form-control" >
 
-                                        <textarea ng-model="field.value" ng-switch-when="TEXTAREA"  class="form-control" readonly></textarea>
+                                        <textarea ng-model="field.value" ng-switch-when="TEXTAREA"  class="form-control" ></textarea>
 
                                         <select ng-switch-when="OPTIONS" class="form-control">
                                             <option ng-repeat="option in field.options track by $index">{{option.label}}</option>
@@ -84,7 +84,7 @@
                                         <div ng-switch-when="CHECKBOXES">
                                             <!--{{field.options}}-->
                                             <div ng-repeat="option in field.options track by $index">
-                                                <input  type="checkbox" ng-model="option.selected" disabled>{{option.label}}
+                                                <input  type="checkbox" ng-model="option.selected" >{{option.label}}
                                                 <!--<div ng-if="option.selected==='true'">-->
                                                 <!--<input ng-model="option.selected" checked type="checkbox" value="{{option.value}}">{{option.label}}-->
                                                 <!--</div>-->
@@ -97,7 +97,7 @@
                                         <div ng-switch-when="RADIOS">
                                             <!--{{field.options}}-->
                                             <div ng-repeat="option in field.options ">
-                                                <input ng-model="option.selected" name="1" type="radio" disabled>{{option.label}}
+                                                <input ng-model="option.selected" name="1" type="radio" >{{option.label}}
                                             </div>
                                         </div>
 
@@ -112,7 +112,13 @@
                 <div class="modal-footer">
 
                     <!--<div ng-if="model.form.state==='InProgress'">-->
-                    <button ng-if="model.form.state==='InProgress'" ng-click="model.nudge(model.form.userId)" type="button" class="btn btn-success" data-dismiss="modal">Nudge</button>
+                    <button ng-if="model.form.state==='InProgress'" ng-click="model.nudge(model.form.userId)" type="button" class="btn btn-success" data-dismiss="modal">Nudge User</button>
+
+                    <button  ng-click="model.saveForm(model.form)" type="button" class="btn btn-success" data-dismiss="modal">Update</button>
+
+                    <button type="button" class="btn btn-danger" ng-click="model.deleteFormById(model.form._id)" >Delete</button>
+
+
                     <!--</div>-->
                     <!--<div>-->
                     <!--<button  type="button" class="btn btn-danger" data-dismiss="modal">close</button>-->
